2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: Rebuild the menu
	  if the thumbable status changed
	* hildon-navigator/hn-app-menu-item.c: Hopefully fixed
	  the size_request for good

2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.96-1

2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/backgroun-manager.c: Use SIGKILL to kill the child,
	to avoid interfering with our own signal handler.

2006-10-19  Moises Martinez <moises.martinzes@nokia.com>

	* libhildonmenu/libhildonmenu.c: (read_menu_conf) Initialized two pointer to
	null. They were crashing desktop on parsing others menu's bogus XML.

2006-10-19  Tomas Junnonen <tomas.junnonen@nokia.com>

	* hildon-navigator/hn-keys.c, hildon-navigator/hn-wm.c:
	Relay long press of power key shortcut event to MCE.
	Fixes: NB#43734

2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-applet.c: emit "applet-change-start"
	also when the applet is closed with the button

2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.c: Fixed accidental removal of
	  a "fprintf"

2006-10-17  Moises Martinez <moises.martinzes@nokia.com>

	* hildons-status-bar/hildon-status-bar-main.c:
	Return value when called event d-bus method. Fixes: NB#43303 

2006-10-17  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hn-app-switcher.c: Only build the menu when it has
	  changed. Fixes: NB#42748

2006-10-17  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c: Added asserts
	for accesing the private members. Fixes: NB#43321

2006-10-17  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/background-manager.c: Run as many iteration of the
	  main loop as necessary between each _read. Fixes NB#42489

2006-10-17  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-window.c: made all info notes
	  created from home system modal to avoid them ending up